--- a/html/miscellaneous/C/Computer Science/index.html
+++ b/html/miscellaneous/C/Computer Science/index.html
@@ -170,6 +170,11 @@
                 </li>
 
                 <li>
+                    <a href = "../../../../html/miscellaneous/S/SQL/index.html">SQL</a>
+                </li>
+
+
+                <li>
                     <a href = "../../../../html/miscellaneous/T/Telegram/index.html">Telegram</a>
                 </li>
 
