--- a/html/miscellaneous/O/Odoo/credit_note.html
+++ b/html/miscellaneous/O/Odoo/credit_note.html
@@ -65,7 +65,9 @@
 		<ul class="site_menu">
               <li><a href = "../../../../html/miscellaneous/O/Odoo/down_payment.html">Down payment</a></li>
               <li><a href = "../../../../html/miscellaneous/O/Odoo/credit_note.html" class = "selected">Credit note</a></li>
-        </ul>
+        
+              <li><a href = "../../../../html/miscellaneous/O/Odoo/purchases.html">Purchases</a></li>
+            </ul>
 
 
         <h1 class = "big">Note de crédit (avoir)</h1>
