--- a/html/miscellaneous/O/Odoo/down_payment.html
+++ b/html/miscellaneous/O/Odoo/down_payment.html
@@ -65,6 +65,8 @@
 		<ul class="site_menu">
             <li><a href = "../../../../html/miscellaneous/O/Odoo/down_payment.html" class = "selected">Down payment</a></li>
             <li><a href = "../../../../html/miscellaneous/O/Odoo/credit_note.html" >Credit note</a></li>
+
+            <li><a href = "../../../../html/miscellaneous/O/Odoo/purchases.html">Purchases</a></li>
         </ul>
 
 
