--- a/html/miscellaneous/S/index.html
+++ b/html/miscellaneous/S/index.html
@@ -54,6 +54,11 @@
         </ul>
 
 
+        <ul class="site_menu">
+            <li><a href = "../../../html/miscellaneous/S/SQL/index.html">SQL</a></li>
+        </ul>
+
+
         <h1 class = "big">S</h1>
 
         <div>
