--- a/html/miscellaneous/O/Odoo/index.html
+++ b/html/miscellaneous/O/Odoo/index.html
@@ -65,6 +65,8 @@
 		<ul class="site_menu">
       <li><a href = "../../../../html/miscellaneous/O/Odoo/down_payment.html">Down payment</a></li>
       <li><a href = "../../../../html/miscellaneous/O/Odoo/credit_note.html">Credit note</a></li>
+
+      <li><a href = "../../../../html/miscellaneous/O/Odoo/purchases.html">Purchases</a></li>
     </ul>
 
 
@@ -364,7 +366,7 @@
                     
                     
                     <td>
-                      <a href = "../../../../html/miscellaneous/O/Odoo/index.html"></a>
+                      <a href = "../../../../html/miscellaneous/O/Odoo/purchases.html">Purchases</a>
                     </td>
 
                     <td>
