--- a/html/miscellaneous/G/Go/how_to.html
+++ b/html/miscellaneous/G/Go/how_to.html
@@ -60,6 +60,7 @@
 		<ul class="site_menu">
             <li><a href = "../../../../html/miscellaneous/G/Git/index.html">Git</a></li>
             <li><a href = "../../../../html/miscellaneous/G/Go/index.html"class = "selected">Go</a></li>
+            <li><a href = "../../../../html/miscellaneous/G/Graphs/index.html">Graphs</a></li>
 		</ul>
 
     <ul class="site_menu">
