--- a/html/miscellaneous/W/Web/how_to.html
+++ b/html/miscellaneous/W/Web/how_to.html
@@ -77,7 +77,10 @@
 
               <ul>
                 
-                <li></li>
+                <li>
+                    <b>HTML / CSS / Javascript: auto-number table rows</b> : 
+                    <a href = "https://stackoverflow.com/questions/17012421/auto-number-table-rows" target = "_blank">https://stackoverflow.com</a>
+                </li>
   
 
               </ul>
