CSS reversed table order

--- a/html/miscellaneous/B/Books/index.html
+++ b/html/miscellaneous/B/Books/index.html
@@ -74,7 +74,7 @@
 
 
 
-<table>
+<table class = "numbered">
 
 
 
@@ -84,38 +84,22 @@
 <th>Key words</th>
 </tr>
 
-
 <!-- --------------------------- -->
 <tr><td></td><td>
-    Jesús Barrasa & Jim Webber (?). Building Knowledge Graphs: A Practitioner’s Guide.
-<a href = "https://neo4j.com/knowledge-graphs-practitioners-guide/" target = "_blank">
-    https://neo4j.com/
-</a></td><td>
-Data science, Graphs, Knowledge graphs, Neo4j.
-</td></tr>
-
-<!-- --------------------------- -->
-<tr><td></td><td>
-    William Lyon (2022). Fullstack GraphQL Applications with React, Node.js, and Neo4j.
-<a href = "https://neo4j.com/fullstack-graphql-applications-react-nodejs-neo4j/" target = "_blank">
-    https://neo4j.com/
-</a>
-
-<a href = "https://www.manning.com/books/fullstack-graphql-applications/" target = "_blank">
-    https://www.manning.com/
-</a>
-
-</td><td>
-GraphQL, React, Node.js, Neo4j.
-</td></tr>
-
-<!-- --------------------------- -->
-<tr><td></td><td>
-    Ian Robinson, Jim Webber, and Emil Eifrém (?). Graph Databases. 2nd Edition.
+    Ian Robinson, Jim Webber, and Emil Eifrém (2015). Graph Databases. 2nd Edition.
 <a href = "https://neo4j.com/graph-databases-book/" target = "_blank">
     https://neo4j.com/
 </a></td><td>
 Graphs, Graph databases, Neo4j.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Mark Needham, Amy E. Hodler (2019). Graph Algorithms: Practical Examples in Apache Spark and Neo4j
+<a href = "https://www.oreilly.com/library/view/graph-algorithms/9781492047674/" target = "_blank">
+    https://www.oreilly.com/
+</a></td><td>
+Graphs, Graph algorithms, Apache Spark, Neo4j.
 </td></tr>
 
 <!-- --------------------------- -->
@@ -125,6 +109,46 @@ Graphs, Graph databases, Neo4j.
     https://www.manning.com/
 </a></td><td>
 Graphs, Data science.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Jesús Barrasa & Jim Webber (2021). Building Knowledge Graphs: A Practitioner’s Guide.
+<a href = "https://neo4j.com/knowledge-graphs-practitioners-guide/" target = "_blank">
+    https://neo4j.com/
+</a></td><td>
+Data science, Graphs, Knowledge graphs, Neo4j.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Alessandro Negro (2021). Graph-Powered Machine Learning
+<a href = "https://www.manning.com/books/graph-powered-machine-learning" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Graphs, Graph Algorithms, Machine Learning, Neo4j.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    William Lyon (2022). Fullstack GraphQL Applications with React, Node.js, and Neo4j.
+<a href = "https://neo4j.com/fullstack-graphql-applications-react-nodejs-neo4j/" target = "_blank">
+    https://neo4j.com/
+</a>
+<a href = "https://www.manning.com/books/fullstack-graphql-applications/" target = "_blank">
+    https://www.manning.com/
+</a>
+</td><td>
+GraphQL, React, Node.js, Neo4j.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Alessandro Negro with Vlastimil Kus, Giuseppe Futia and Fabio Montagna (2022). Knowledge Graphs Applied
+<a href = "https://www.manning.com/books/knowledge-graphs-applied" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Graphs, Knowledge Graphs.
 </td></tr>
 
 <!-- --------------------------- -->
@@ -147,29 +171,11 @@ Graphs, Graph Algorithms, National Language Processing, Cypher, Machine Learning
 
 <!-- --------------------------- -->
 <tr><td></td><td>
-    John Maiden (?). ML for Knowledge Graphs with Neo4j
+    John Maiden. ML for Knowledge Graphs with Neo4j
 <a href = "https://www.manning.com/liveprojectseries/ml-for-knowledge-graphs-with-neo4j" target = "_blank">
     https://www.manning.com/
 </a></td><td>
 Graphs, Knowledge Graphs, Machine Learning, Neo4j.
-</td></tr>
-
-<!-- --------------------------- -->
-<tr><td></td><td>
-    Alessandro Negro with Vlastimil Kus, Giuseppe Futia and Fabio Montagna (2022). Knowledge Graphs Applied
-<a href = "https://www.manning.com/books/knowledge-graphs-applied" target = "_blank">
-    https://www.manning.com/
-</a></td><td>
-Graphs, Knowledge Graphs.
-</td></tr>
-
-<!-- --------------------------- -->
-<tr><td></td><td>
-    Alessandro Negro (2021). Graph-Powered Machine Learning
-<a href = "https://www.manning.com/books/graph-powered-machine-learning" target = "_blank">
-    https://www.manning.com/
-</a></td><td>
-Graphs, Graph Algorithms, Machine Learning, Neo4j.
 </td></tr>
 
 <!-- --------------------------- -->
