--- a/html/miscellaneous/M/Memgraph/index.html
+++ b/html/miscellaneous/M/Memgraph/index.html
@@ -84,6 +84,34 @@
 
                 
                 <li>
+                    <b>Documentation</b>: <a href = "https://memgraph.com/docs/" target = "_blank">https://memgraph.com/docs/</a> 
+                 </li>
+
+                 <li>
+                    <b>Articles on Medium</b>:
+
+                    <a href = "https://medium.com/@memgraphdb" target = "_blank">https://medium.com/@memgraphdb</a>
+                 </li>
+ 
+                 <li>
+                    <b>Blog</b>: 
+
+                    <a href = "https://memgraph.com/blog/" target = "_blank">https://memgraph.com/blog/</a> 
+
+                 </li>
+
+
+
+                 <li>
+                    <b>Recommended graph algorithm books</b>: 
+
+                    <a href = "https://memgraph.com/blog/top-7-graph-algorithm-books" target = "_blank">https://memgraph.com/blog/</a> 
+
+                 </li>
+
+
+          
+                <li>
                   Practical information: <a href = "../../../../html/miscellaneous/M/Memgraph/how_to.html">How to</a>
                 </li>
 
