--- a/html/miscellaneous/W/Web/how_to.html
+++ b/html/miscellaneous/W/Web/how_to.html
@@ -79,9 +79,13 @@
                 
                 <li>
                     <b>HTML / CSS / Javascript: auto-number table rows</b> : 
-                    <a href = "https://stackoverflow.com/questions/17012421/auto-number-table-rows" target = "_blank">https://stackoverflow.com</a>
+                    <a href = "https://stackoverflow.com/questions/17012421/auto-number-table-rows" target = "_blank">https://stackoverflow.com/</a>
                 </li>
   
+                <li>
+                    <b>Using CSS counters</b>:
+                    <a href = "https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_counter_styles/Using_CSS_counters" target = "_blank">https://developer.mozilla.org/</a>
+                </li>
 
               </ul>
             
