--- a/html/miscellaneous/B/Books/index.html
+++ b/html/miscellaneous/B/Books/index.html
@@ -84,6 +84,19 @@
 <th>Key words</th>
 </tr>
 
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Nina Zumel and John Mount (2014). Practical Data Science with R
+<a href = "https://www.manning.com/books/practical-data-science-with-r" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Data Science, R.
+</td></tr>
+
+
+
+
 <!-- --------------------------- -->
 <tr><td></td><td>
     Ian Robinson, Jim Webber, and Emil Eifrém (2015). Graph Databases. 2nd Edition.
@@ -95,12 +108,240 @@ Graphs, Graph databases, Neo4j.
 
 <!-- --------------------------- -->
 <tr><td></td><td>
+    William Kennedy with Brian Ketelsen and Erik St. Martin (2015). Go in Action
+<a href = "https://www.manning.com/books/go-in-action" target = "_blank">
+    https://neo4j.com/
+</a></td><td>
+Go Programming.
+</td></tr>
+
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Chris Garrard (2016). Geoprocessing with Python
+<a href = "https://www.manning.com/books/geoprocessing-with-python" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Geoprocessing, Geospatial Data, Python.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Sau Sheong Chang (2016). Go Web Programming
+<a href = "https://www.manning.com/books/go-web-programming" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Go Programming, Web Applications.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Matt Butcher and Matt Farina (2016). Go in Practice
+<a href = "https://www.manning.com/books/go-in-practice" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Go Programming.
+</td></tr>
+
+
+
+
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    François Chollet (2017). Deep Learning with Python
+<a href = "https://www.manning.com/books/deep-learning-with-python" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Deep Learning, Machine Learning, Python.
+</td></tr>
+
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    François Chollet (2018). Deep Learning with R
+<a href = "https://www.manning.com/books/deep-learning-with-r" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Deep Learning, Machine Learning, R.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Nishant Shukla with Kenneth Fricklas (2018). Machine Learning with TensorFlow
+<a href = "https://www.manning.com/books/machine-learning-with-tensorflow" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Machine Learning, TensorFlow, Python.
+</td></tr>
+
+
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
     Mark Needham, Amy E. Hodler (2019). Graph Algorithms: Practical Examples in Apache Spark and Neo4j
 <a href = "https://www.oreilly.com/library/view/graph-algorithms/9781492047674/" target = "_blank">
     https://www.oreilly.com/
 </a></td><td>
 Graphs, Graph algorithms, Apache Spark, Neo4j.
 </td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Andrew W. Trask (2019). Grokking Deep Learning
+<a href = "https://www.manning.com/books/grokking-deep-learning" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Deep Learning, Machine Learning.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Hobson Lane, Cole Howard, Hannes Hapke (2019). Natural Language Processing in Action. Understanding, analyzing, and generating text with Python
+<a href = "https://www.manning.com/books/natural-language-processing-in-action" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Natural Language Processing, Python.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Max Pumperla and Kevin Ferguson (2019). Deep Learning and the Game of Go
+<a href = "https://www.manning.com/books/deep-learning-and-the-game-of-go" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Deep Learning, Machine Learning, Game of Go, Python.
+</td></tr>
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Jesse C. Daniel (2019). Data Science with Python and Dask
+<a href = "https://www.manning.com/books/data-science-with-python-and-dask" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Data Science, Pandas, NumPy, Scikit-Learn, Python, Dask.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Nina Zumel and John Mount (2019). Practical Data Science with R. Second Edition.
+<a href = "https://www.manning.com/books/practical-data-science-with-r-second-edition" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Data Science, R.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    David Kopec (2019). Classic Computer Science Problems in Python
+<a href = "https://www.manning.com/books/classic-computer-science-problems-in-python" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Computer Science, Python.
+</td></tr>
+
+
+
+
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Alexander Zai and Brandon Brown (2020). Deep Reinforcement Learning in Action
+<a href = "https://www.manning.com/books/deep-reinforcement-learning-in-action" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Deep Reinforcement Learning, Reinforcement Learning, Machine Learning.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Mohamed Elgendy (2020). Deep Learning for Vision Systems
+<a href = "https://www.manning.com/books/deep-learning-for-vision-systems" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Deep Learning, Machine Learning, Vision.
+</td></tr>
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Miguel Morales (2020). Grokking Deep Reinforcement Learning
+<a href = "https://www.manning.com/books/grokking-deep-reinforcement-learning" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Deep Reinforcement Learning, Reinforcement Learning, Machine Learning.
+</td></tr>
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    John T. Wolohan (2020). Mastering Large Datasets with Python. Parallelize and Distribute Your Python Code
+<a href = "https://www.manning.com/books/mastering-large-datasets-with-python" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Parallelism, Distributed Technologies, Large Datasets, Python.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Paul Orland (2020). Math for Programmers. 3D graphics, machine learning, and simulations with Python
+<a href = "https://www.manning.com/books/math-for-programmers" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Mathematics, Programming, Data Science, Machine Learning, Computer Graphics, Cryptography.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Hefin I. Rhys (2020). Machine Learning with R, the tidyverse, and mlr
+<a href = "https://www.manning.com/books/machine-learning-with-r-the-tidyverse-and-mlr" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Machine Learning, R, tidyverse, mlr.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Oliver Dürr, Beate Sick, Elvis Murina (2020). Probabilistic Deep Learning. With Python, Keras and TensorFlow Probability
+<a href = "https://www.manning.com/books/probabilistic-deep-learning" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Probabilistic Deep Learning, Deep Learning, Machine Learning, Python, Keras, TensorFlow.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    David Kopec (2020). Classic Computer Science Problems in Java
+<a href = "https://www.manning.com/books/classic-computer-science-problems-in-java" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Computer Science, Java.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Bina Ramamurthy (2020). Blockchain in Action
+<a href = "https://www.manning.com/books/blockchain-in-action" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Cryptography, Blcokchain.
+</td></tr>
+
+
+
+
+
 
 <!-- --------------------------- -->
 <tr><td></td><td>
@@ -131,6 +372,69 @@ Graphs, Graph Algorithms, Machine Learning, Neo4j.
 
 <!-- --------------------------- -->
 <tr><td></td><td>
+    Robert (Munro) Monarch (2021). Human-in-the-Loop Machine Learning. Active learning and annotation for human-centered AI
+<a href = "https://www.manning.com/books/human-in-the-loop-machine-learning" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Machine Learning, Artificial Intelligence.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    David Wong (2021). Real-World Cryptography
+<a href = "https://www.manning.com/books/real-world-cryptography" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Cryptography.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Marcello La Rocca (2021). Advanced Algorithms and Data Structures
+<a href = "https://www.manning.com/books/advanced-algorithms-and-data-structures" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Algorithms, Data Structures.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Boris Paskhaver (2021). Pandas in Action
+<a href = "https://www.manning.com/books/pandas-in-action" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Data Science, Pandas, Python.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    François Chollet (2021). Deep Learning with Python. Second Edition.
+<a href = "https://www.manning.com/books/deep-learning-with-python-second-edition" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Deep Learning, Machine Learning, Python, 
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Sarah C. Kaiser and Cassandra E. Granade (2021). Learn Quantum Computing with Python and Q#. A hands-on approach
+<a href = "https://www.manning.com/books/learn-quantum-computing-with-python-and-q-sharp" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Quantum Computing, Python, Q#.
+</td></tr>
+
+
+
+
+
+
+
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
     William Lyon (2022). Fullstack GraphQL Applications with React, Node.js, and Neo4j.
 <a href = "https://neo4j.com/fullstack-graphql-applications-react-nodejs-neo4j/" target = "_blank">
     https://neo4j.com/
@@ -153,6 +457,76 @@ Graphs, Knowledge Graphs.
 
 <!-- --------------------------- -->
 <tr><td></td><td>
+    Stephan Raaijmakers (2022). Deep Learning for Natural Language Processing
+<a href = "https://www.manning.com/books/deep-learning-for-natural-language-processing" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Deep Learning, Machine Learning, Natural Language Processing.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Bastian Gruber (2022). Rust Web Development. With warp, tokio, and reqwest
+<a href = "https://www.manning.com/books/rust-web-development" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Rust, Web Development, warp, tokio, reqwest, synchronous environment, web APIs, JSON.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Johan Vos (2022). Quantum Computing in Action
+<a href = "https://www.manning.com/books/quantum-computing-in-action" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Quantum Computing, Qubits, Quantum Gates, Superposition, Entanglement, Hybrid Computing, Quantum Algorithms.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Dane Hillard (2022). Publishing Python Packages. Test, share, and automate your projects
+<a href = "https://www.manning.com/books/publishing-python-packages" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Python, Python Packages, Packaging, Installing, Testing, Git, GitHub.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Yehonathan Sharvit (2022). Data-Oriented Programming. Reduce software complexity
+<a href = "https://www.manning.com/books/data-oriented-programming" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Programming, Data-Oriented Programming.
+</td></tr>
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Ville Tuulos (2022). Effective Data Science Infrastructure. How to make data scientists productive
+<a href = "https://www.manning.com/books/effective-data-science-infrastructure" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Data Science, Productivity, Efficiency, Machine Learning, Cloud, Conda, Metaflow, Docker, Large Datasets, Infrastructure.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Bogumił Kamiński (2022). Julia for Data Analysis
+<a href = "https://www.manning.com/books/julia-for-data-analysis" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Julia Programming, Data Science.
+</td></tr>
+
+
+
+
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
     Keita Broadwater and Namid Stillman (2023). Graph Neural Networks in Action
 <a href = "https://www.manning.com/books/graph-neural-networks-in-action" target = "_blank">
     https://www.manning.com/
@@ -171,6 +545,88 @@ Graphs, Graph Algorithms, National Language Processing, Cypher, Machine Learning
 
 <!-- --------------------------- -->
 <tr><td></td><td>
+    Krishnendu Chaudhury (2023). Math and Architectures of Deep Learning
+<a href = "https://www.manning.com/books/math-and-architectures-of-deep-learning" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Mathematics, Deep Learning, Machine Learning.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Tiago Rodrigues Antao (2023). Fast Python. High performance techniques for large datasets
+<a href = "https://www.manning.com/books/fast-python" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Data Science, Python, Large Datasets, NumPy, Pandas, Cython, GPU computing.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Erik Engheim (2023). Julia as a Second Language. General purpose programming with a taste of data science
+<a href = "https://www.manning.com/books/julia-as-a-second-language" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Julia Programming, Data Science.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Joel Holmes (2023). Shipping Go. Develop, deliver, discuss, design, and go again
+<a href = "https://www.manning.com/books/shipping-go" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Go Programming, Automated Software Delivery Pipeline.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Oleksandr Kaleniuk (2023). Geometry for Programmers
+<a href = "https://www.manning.com/books/geometry-for-programmers" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Geometry, Programming, CAD, game engines, GIS.
+</td></tr>
+
+
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Tim Boring. Build an Orchestrator in Go (From Scratch)
+<a href = "https://www.manning.com/books/build-an-orchestrator-in-go-from-scratch" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Go Programming, Docker API, Orchestration System.
+</td></tr>
+
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Robert Ness. Causal AI 
+<a href = "https://www.manning.com/books/causal-ai" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Artificial Intelligence, Causality, Causal Reinforcement Learning, Causal Inference, PyTorch, Pyro, Python.
+</td></tr>
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Philipp Hagenlocher . Haskell Bookcamp
+<a href = "https://www.manning.com/books/haskell-bookcamp" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Haskell Programming, Programming.
+</td></tr>
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
     John Maiden. ML for Knowledge Graphs with Neo4j
 <a href = "https://www.manning.com/liveprojectseries/ml-for-knowledge-graphs-with-neo4j" target = "_blank">
     https://www.manning.com/
@@ -180,12 +636,35 @@ Graphs, Knowledge Graphs, Machine Learning, Neo4j.
 
 <!-- --------------------------- -->
 <tr><td></td><td>
-XXX (?). XXX
-<a href = "XXX" target = "_blank">
-    XXX
+    Leo Porter and Daniel Zingaro. Learn AI-Assisted Python Programming. With GitHub Copilot and ChatGPT
+<a href = "https://www.manning.com/books/learn-ai-assisted-python-programming" target = "_blank">
+    https://www.manning.com/
 </a></td><td>
-XXX
+Python, ChatGPIT, GitHub Copilot.
 </td></tr>
+
+<!-- --------------------------- -->
+
+<tr><td></td><td>
+    Numa Dhamani and Maggie Engler. Introduction to Generative AI. An ethical, societal, and legal overview
+<a href = "https://www.manning.com/books/introduction-to-generative-ai" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Generative AI, Artificial Intelligence, Ethics, Sociology, Law.
+</td></tr>
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Nicole Koenigstein. Transformers in Action
+<a href = "https://www.manning.com/books/transformers-in-action" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Machine Learning, Large Language Models (LLMs), ChatGPT, Bard, LLAMA, Ray Tune, Optuna, HuggingFace, Reinforcement Learning.
+</td></tr>
+
+
 
 
 </table>        
