--- a/html/miscellaneous/J/Julia/index.html
+++ b/html/miscellaneous/J/Julia/index.html
@@ -59,7 +59,7 @@
 
     <ul class="site_menu">
       <li><a href = "../../../../html/miscellaneous/J/Java/index.html">Java</a></li>
-      <li><a href = "../../../../html/miscellaneous/J/Javascript/index.html">Javascript</a></li>
+      <li><a href = "../../../../html/miscellaneous/J/JavaScript/index.html">JavaScript</a></li>
 
       <li><a href = "../../../../html/miscellaneous/J/Julia/index.html"class = "selected">Julia</a></li>
   </ul>
