--- a/html/miscellaneous/W/Web/how_to.html
+++ b/html/miscellaneous/W/Web/how_to.html
@@ -78,7 +78,7 @@
               <ul>
                 
                 <li>
-                    <b>HTML / CSS / Javascript: auto-number table rows</b> : 
+                    <b>HTML / CSS / JavaScript: auto-number table rows</b> : 
                     <a href = "https://stackoverflow.com/questions/17012421/auto-number-table-rows" target = "_blank">https://stackoverflow.com/</a>
                 </li>
   
