--- a/html/miscellaneous/J/Java/how_to.html
+++ b/html/miscellaneous/J/Java/how_to.html
@@ -60,7 +60,7 @@
     	<ul class="site_menu">
 
             <li><a href = "../../../../html/miscellaneous/J/Java/index.html"class = "selected">Java</a></li>
-            <li><a href = "../../../../html/miscellaneous/J/Javascript/index.html">Javascript</a></li>
+            <li><a href = "../../../../html/miscellaneous/J/JavaScript/index.html">JavaScript</a></li>
 
 
             <li><a href = "../../../../html/miscellaneous/J/Julia/index.html">Julia</a></li>
