--- a/html/miscellaneous/B/Books/index.html
+++ b/html/miscellaneous/B/Books/index.html
@@ -1350,6 +1350,15 @@ Programming.
 
 
 
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Michael S. Horn, Melanie West, Cameron Roberts (2022). Introduction to Digital Music with Python Programming Learning Music with Code
+<a href = "https://www.routledge.com/Introduction-to-Digital-Music-with-Python-Programming-Learning-Music-with/Horn-West-Roberts/p/book/9780367470821" target = "_blank">
+    https://www.routledge.com/
+</a></td><td>
+    Python Programming, Music.
+</td></tr>
+
 
 
 
