--- a/html/miscellaneous/N/Neo4j/index.html
+++ b/html/miscellaneous/N/Neo4j/index.html
@@ -104,6 +104,17 @@
                   <b>Neo4j AuraDB</b>: <a href = "https://neo4j.com/cloud/platform/aura-graph-database/" target = "_blank">https://neo4j.com/cloud/</a> (cloud service)
                 </li>
 
+
+                <li>
+                  <b>NeoDash</b>: <a href = "https://neo4j.com/labs/neodash/" target = "_blank">https://neo4j.com/labs/neodash/</a> (dashboard builder)
+                </li>
+
+                
+                <li>
+                  <b>arrows.app</b>: <a href = "https://neo4j.com/labs/arrows/" target = "_blank">https://neo4j.com/labs/arrows/</a> 
+                </li>
+
+
                 <li>
                   <b>GraphAcademy</b>: <a href = "https://graphacademy.neo4j.com/" target = "_blank">https://graphacademy.neo4j.com/</a> (courses)
                 </li>
@@ -165,10 +176,6 @@
 
                 <li>
                   <b>Events</b>: <a href = "https://neo4j.com/events/" target = "_blank">https://neo4j.com/events/</a> 
-                </li>
-
-                <li>
-                  <b>arrows.app</b>: <a href = "https://neo4j.com/labs/arrows/" target = "_blank">https://neo4j.com/labs/arrows/</a> 
                 </li>
 
 
