--- a/html/miscellaneous/N/Neo4j/how_to.html
+++ b/html/miscellaneous/N/Neo4j/how_to.html
@@ -57,7 +57,8 @@
 		</ul>
 
 
-		<ul class="site_menu">
+		<ul class="site_menu">            
+            <li><a href = "../../../../html/miscellaneous/N/NaLLM/index.html">NaLLM</a></li>
             <li><a href = "../../../../html/miscellaneous/N/Neo4j/index.html" class = "selected">Neo4j</a></li>
 		</ul>
 
@@ -91,7 +92,12 @@
                    <b>Rename labels, types, and properties</b>: <a href = "https://neo4j.com/docs/apoc/current/graph-refactoring/rename-label-type-property/" target = "_blank">https://neo4j.com/docs/apoc</a> 
                 </li>
 
-
+                
+                <li>
+                    <b>Bite-Sized Neo4j for Data Scientists</b>: <a href = "https://github.com/cj2001/bite_sized_data_science" target = "_blank">https://github.com/cj2001/</a> 
+             
+                 </li>
+  
 
 
                 <li>
