--- a/html/miscellaneous/N/index.html
+++ b/html/miscellaneous/N/index.html
@@ -54,6 +54,7 @@
         </ul>
 
 		<ul class="site_menu">
+            <li><a href = "../../../html/miscellaneous/N/NaLLM/index.html">NaLLM</a></li>
             <li><a href = "../../../html/miscellaneous/N/Neo4j/index.html">Neo4j</a></li>
 		</ul>
 
