--- a/html/miscellaneous/G/Gephi/index.html
+++ b/html/miscellaneous/G/Gephi/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>
-            Go
+            Gephi
         </title>
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="../../../../img/PPJMHJ.ico" />
@@ -58,19 +58,19 @@
 
 
 		<ul class="site_menu">
-            <li><a href = "../../../../html/miscellaneous/G/Gephi/index.html">Gephi</a></li>
+            <li><a href = "../../../../html/miscellaneous/G/Gephi/index.html" class = "selected">Gephi</a></li>
             <li><a href = "../../../../html/miscellaneous/G/Git/index.html">Git</a></li>
-            <li><a href = "../../../../html/miscellaneous/G/Go/index.html" class = "selected">Go</a></li>
+            <li><a href = "../../../../html/miscellaneous/G/Go/index.html">Go</a></li>
             <li><a href = "../../../../html/miscellaneous/G/Graphs/index.html">Graphs</a></li>
 		</ul>
 
     <ul class="site_menu">
-        <li><a href = "../../../../html/miscellaneous/G/Go/how_to.html">How to?</a></li>
+        <li><a href = "../../../../html/miscellaneous/G/Git/how_to.html">How to?</a></li>
     </ul>
 
 
-        <h1 class = "big">Go</h1>
-        <h2 class = "big">Programming language</h2>
+        <h1 class = "big">Gephi</h1>
+        <h2 class = "big">Graph visualization and exploration software</h2>
 
         <div>
 
@@ -82,18 +82,12 @@
 
 
                 <li>
-                   <b>Go</b>: <a href = "https://go.dev/" target = "_blank">https://go.dev/</a> 
+                   <b>Gephi</b>: <a href = "https://gephi.org/" target = "_blank">https://gephi.org/</a> 
                 </li>
 
-                <li>
-                    <b>Tutorial</b>: <a href = "https://www.w3schools.com/go/" target = "_blank">https://www.w3schools.com/go/</a> 
-                 </li>
- 
-
-                
 
                 <li>
-                  Practical information: <a href = "../../../../html/miscellaneous/G/Go/how_to.html">How to</a>
+                  Practical information: <a href = "../../../../html/miscellaneous/G/Gephi/how_to.html">How to</a>
                 </li>
 
                 
