--- a/html/miscellaneous/G/Graphs/index.html
+++ b/html/miscellaneous/G/Graphs/index.html
@@ -58,6 +58,7 @@
 
 
 		<ul class="site_menu">
+            <li><a href = "../../../../html/miscellaneous/G/Gephi/index.html">Gephi</a></li>
             <li><a href = "../../../../html/miscellaneous/G/Git/index.html">Git</a></li>
             <li><a href = "../../../../html/miscellaneous/G/Go/index.html" >Go</a></li>
             <li><a href = "../../../../html/miscellaneous/G/Graphs/index.html"class = "selected">Graphs</a></li>
@@ -77,7 +78,7 @@
               <ul>
             
                 <li>
-                  Graph databases: <a href = "../../../../html/miscellaneous/N/Neo4j/index.html">Neo4j</a>, <a href = "../../../../html/miscellaneous/M/Memgraph/index.html">Memgraph</a>
+                  Related pages: <a href = "../../../../html/miscellaneous/G/Gephi/index.html">Gephi</a>, <a href = "../../../../html/miscellaneous/M/Memgraph/index.html">Memgraph</a>, <a href = "../../../../html/miscellaneous/N/NaLLM/index.html">NaLLM</a>, <a href = "../../../../html/miscellaneous/N/Neo4j/index.html">Neo4j</a>, <a href = "../../../../html/miscellaneous/N/NetworkX/index.html">NetworkX</a>
                 </li>
 
               </ul>
