--- a/html/miscellaneous/N/index.html
+++ b/html/miscellaneous/N/index.html
@@ -56,6 +56,7 @@
 		<ul class="site_menu">
             <li><a href = "../../../html/miscellaneous/N/NaLLM/index.html">NaLLM</a></li>
             <li><a href = "../../../html/miscellaneous/N/Neo4j/index.html">Neo4j</a></li>
+            <li><a href = "../../../html/miscellaneous/N/NetworkX/index.html">NetworkX</a></li>
 		</ul>
 
 
@@ -64,7 +65,7 @@
         <div>
 
 
-            <br /><signature> — 18 October 2023</signature>
+            <br /><signature> — 4 November 2023</signature>
 
         </div>
 
