--- a/html/miscellaneous/G/index.html
+++ b/html/miscellaneous/G/index.html
@@ -56,6 +56,7 @@
 
 		<ul class="site_menu">
 
+            <li><a href = "../../../html/miscellaneous/G/Gephi/index.html">Gephi</a></li>
             <li><a href = "../../../html/miscellaneous/G/Git/index.html">Git</a></li>
             <li><a href = "../../../html/miscellaneous/G/Go/index.html">Go</a></li>
             <li><a href = "../../../html/miscellaneous/G/Graphs/index.html">Graphs</a></li>
