--- a/html/miscellaneous/N/Neo4j/how_to.html
+++ b/html/miscellaneous/N/Neo4j/how_to.html
@@ -60,6 +60,7 @@
 		<ul class="site_menu">            
             <li><a href = "../../../../html/miscellaneous/N/NaLLM/index.html">NaLLM</a></li>
             <li><a href = "../../../../html/miscellaneous/N/Neo4j/index.html" class = "selected">Neo4j</a></li>
+            <li><a href = "../../../../html/miscellaneous/N/NetworkX/index.html">NetworkX</a></li>
 		</ul>
 
     <ul class="site_menu">
