--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 </p>
 
 <p>
-    At the moment, I am developing a computer system to facilitate the integration of data originating from different criminal justice databases: the <a href = "html/miscellaneous/I/IHD/index.html">Integrated Historical Database (IHD)</a>. 
+    For instance, I am developing the <a href = "html/miscellaneous/I/IHD/index.html">Integrated Historical Database (IHD)</a>, a <a href = "html/miscellaneous/G/Graphs/index.html">graph</a>-based computer system to facilitate the integration of data originating from different criminal justice databases. 
 </p> 
 <p>   
     In general, I am interested by <a href = "html/miscellaneous/C/Computer Science/index.html">computers</a>, psychology, language and mathematics.
 </p>
 
 <p>
-    On this website, next to a <a href = "html/miscellaneous/index.html">miscellaneous</a> array of subjects that interest me or that pertain to me, you'll find the <a href = "html/publications/index.html">publications</a> I took part in, the <a href = "html/events/index.html">events</a> in which I may have been involved, and the <a href = "html/institutions/index.html">institutions</a> that supported me in these endeavours. 
+    On this website, you'll find the <a href = "html/publications/index.html">publications</a> I took part in, the <a href = "html/events/index.html">events</a> in which I may have been involved, and the <a href = "html/institutions/index.html">institutions</a> that supported me in these endeavours. The <a href = "html/miscellaneous/index.html">miscellaneous</a> section contains an array of subjects that interest me or that pertain to me, and that I could not place in the other sections.
 </p>
 
 
@@ -47,7 +47,7 @@
 
 
 
-<br /><signature> — 7 October 2023</signature>
+<br /><signature> — 4 November 2023</signature>
         </div>
     </body>
 </html>
